--- a/index.html
+++ b/index.html
@@ -10,29 +10,9 @@
 
   <body>
 
-    <div class="sidebar">
-	  <h2>Home</h2>
-	  <h2><a href="projects.html">Projects</a></h2>
-	  <h2><a href="about.html">About</a></h2>
-	</div>
-	
-	<div align="center">
-	  <h1>Wesley Scott</h1>
-	  <h3>Computer Scientist, Software Developer</h3>
-	  <img src="images/manMe.jpg" alt="Wesley Scott"/>
-	  <p>
-        <a href="https://www.linkedin.com/in/wesley-scott-397b76129/" target="_blank"><img src="images/linkedin.png" style="padding-left:20px;padding-right:20px;"></a>
-        <a href="https://github.com/WesScott" target="_blank"><img src="images/github.png" style="padding-left:20px;padding-right:20px;padding-top:15px"></a>
-        <a href="https://www.facebook.com/wesley.scott.33865" target="_blank"><img src="images/facebook.png" style="padding-left:20px;padding-right:20px;"></a>
-        <a href="files/resume.pdf" target="_blank"><img src="images/resume.png" style="padding-left:30px;padding-right:20px;"></a>
-      </p>
-	  
-	  <div class="footer">
-        <br/>Copyright Wesley Scott 2018-2019&copy;
-	  </div>
-	  
-	</div>
-
+	  <h1><strong>My site is currently being rebuilt in Angular7</strong></h1>
+	  <p>Please check back later for business/freelance inquiries</p>
+    
   </body>
 
 </html>
