--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
  
+	<meta http-equiv="refresh" content="3; URL='https:wesscott.github.io/WesWeb/'" />
+	
   <head>
   
     <link rel="stylesheet" type="text/css" href="styles/styleHome.css">
@@ -11,7 +13,7 @@
   <body>
 
 	  <h1><strong>My site is currently being rebuilt in Angular7</strong></h1>
-	  <p>Please check back later for business/freelance inquiries</p>
+	  <p>Redirecting to <a href="wesscott.github.io/WesWeb/">wesscott.github.io/WesWeb/ in 3 seconds.</a></p>
     
   </body>
 
