--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  
-	<meta http-equiv="refresh" content="3; URL='https://wesscott.github.io/WesWeb/'" />
+	<meta http-equiv="refresh" content="3; URL='wesscott.github.io/WesWeb/'" />
 	
   <head>
   
