--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 
 	  <h1><strong>My site is currently being rebuilt in Angular7</strong></h1>
-	  <p>Redirecting to <a href="wesscott.github.io/WesWeb/">wesscott.github.io/WesWeb/ in 3 seconds.</a></p>
+	  <p>Redirecting to <a href="/WesWeb/">wesscott.github.io/WesWeb/ in 3 seconds.</a></p>
     
   </body>
 
